Add title prop to expand shortcode

--- a/src/content/lessen/fysica/grootheden_eenheden/intro/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/intro/index.mdx
@@ -48,9 +48,7 @@ SI-eenheden:
 | Energie                   | joule             |
 | Snelheid                  | meter per seconde |
 
-<Expand>
-
-Uitbreiding: Hoe lang is een meter?
+<Expand title="Uitbreiding: Hoe lang is een meter?">
 
 We gebruiken een eenheid als "meter" dagelijks. Maar hoe definieer je één meter
 het best? Je zou kunnen voorstellen om een plank te maken van één meter lang om
