--- a/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
@@ -88,9 +88,7 @@ die inwerkt op haar. Dat is vaak zo. Wanneer een voorwerp steunt op een
 zwaartekracht en normaalkracht in op het voorwerp, dan is het **gewicht gelijk
 aan de zwaartekracht**.
 
-<Expand>
-
-Verschillende definities voor gewicht
+<Expand title="Verschillende definities voor gewicht">
 
 Als je verschillende handboeken van fysica naast elkaar legt, zal je zien dat
 "gewicht" niet overal dezelfde definitie heeft. Sommige handboeken definiëren
