--- a/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
@@ -41,9 +41,7 @@ de vector)</Mute>. We schrijven de snelheidsvector als $\vec{v}$.
 Snelheid is dus een vector. Een vector heeft een grootte en een richting. Als
 minstens één van deze verandert, spreken we over **snelheidsverandering**.
 
-<Expand>
-
-En wat met de zin?
+<Expand title="En wat met de zin?">
 
 Wanneer de zin van een snelheidsvector verandert, is er natuurlijk ook een
 snelheidsverandering. De **zin kan echter niet plots _een beetje_ veranderen**.
