--- a/src/content/lessen/fysica/lichtstralen/lichtbronnen/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/lichtbronnen/index.mdx
@@ -49,9 +49,7 @@ eigenlijk een verzameling van heel veel puntvormige lichtbronnen.
 
 ![](img/diffuus.png)
 
-<Expand>
-
-De flitsende fotograaf
+<Expand title="De flitsende fotograaf">
 
 Fotografen moeten voortdurend nadenken over de lichtbron die ze gebruiken. Een
 puntvormige lichtbron <Mute>(zoals de flitser op een fototoestel)</Mute> zorgt
