--- a/src/content/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/index.mdx
@@ -43,9 +43,7 @@ schaduw van de maan op de aarde valt.
 
 ![](img/zonsverduistering.png)
 
-<Expand>
-
-Uitbreiding: tekening niet op schaal
+<Expand title="Uitbreiding: tekening niet op schaal">
 
 Het is belangrijk te beseffen dat het bovenstaande schema **niet op schaal**
 is. Dat wil zeggen dat de verhoudingen van de groottes van de aarde, de maan
@@ -69,9 +67,7 @@ In de gebieden waar de **bijschaduw** van de maan valt, is er een **gedeeltelijk
 ![Gedeeltelijke zonsverduistering](img/partial_eclipse.png "Gedeeltelijke zonsverduistering (bron: <a href='https://en.wikipedia.org/wiki/Solar_eclipse#/media/File:Partial_solar_eclipse_Oct_23_2014_Minneapolis_5-36pm_Ruen1.png'>Wikipedia</a>)")
 
 
-<Expand>
-
-Uitbreiding: soorten zonsverduistering
+<Expand title="Uitbreiding: soorten zonsverduistering">
 
 De afstand tussen de aarde en de maan schommelt tussen ca. 360 000 km en ca.
 410 000 km. Enkel wanneer de man voldoende dicht bij de aarde staat, kan er een
