--- a/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
@@ -114,9 +114,7 @@ ondoorschijnende bol en één langs de onderkant.
 Achter de ondoorschijnende bol krijgen we nu drie schaduwgebieden. Het **middelste
 gebied is de kernschaduw**. De twee gebieden eromheen vormen de **bijschaduw**.
 
-<Expand>
-
-Uitbreiding: grootte van de bijschaduw
+<Expand title="Uitbreiding: grootte van de bijschaduw">
 
 Bij een diffuse lichtbron is er **altijd een bijschaduw**. Hoe groot die bijschaduw is hangt van drie dingen af:
 
@@ -129,9 +127,7 @@ van bijschaduwen opleveren.
 
 </Expand>
 
-<Expand>
-
-Uitbreiding: hard zonlicht
+<Expand title="Uitbreiding: hard zonlicht">
 
 De zon is een diffuse lichtbron en zou dus _zachte_ schaduwen moeten geven.
 Toch vermijden fotografen direct zonlicht omdat het juist _harde_,
