--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -72,9 +72,7 @@ $$
 \end{aligned}
 $$
 
-<Expand>
-
-Toon met meer tussenstappen
+<Expand title="Toon met meer tussenstappen">
 
 $$
 \begin{aligned}
