--- a/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
@@ -89,9 +89,7 @@ V = \{\orange{-1}\}
 $$
 
 
-<Expand>
-
-Uitbreiding: Meerdere oplossingen
+<Expand title="Uitbreiding: Meerdere oplossingen">
 
 Het kan natuurlijk ook dat er meer dan één getal in de oplossingsverzameling
 zit. Voor de vergelijking $x^2 + 2x = 3$ zijn er bijvoorbeeld twee waarden
