--- a/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
@@ -64,9 +64,7 @@ $$
 \end{aligned}
 $$
 
-<Expand>
-
-Uitbreiding: dubbele pijlen
+<Expand title="Uitbreiding: dubbele pijlen">
 
 Er staat niet voor niets een _dubbele pijl_ ($\Leftrightarrow$) tussen de vergelijkingen in plaats van een enkele pijl ($\Rightarrow$ of $\Leftarrow$). Je kan namelijk van de laatste vergelijking ook terug naar de eerste vergelijking gaan. De omvorming is _omkeerbaar_:
 $$
@@ -134,9 +132,7 @@ $$
 $$
 **En we hebben $x$ gevonden!!!** 🎉💃💪
 
-<Expand>
-
-Uitbreiding: via een andere weg
+<Expand title="Uitbreiding: via een andere weg">
 
 Als we in de stap met de keuze tussen $\orange{3}$ en $-6$, kiezen om eerst de $\orange{3}$ weg te werken in plaats van de $6$, vinden we natuurlijk hetzelfde:
 
