--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -88,9 +88,7 @@ $$
 $$
 
 
-<Expand>
-
-Waarom mogen we een minteken vervangen door $(-1)$?
+<Expand title="Waarom mogen we een minteken vervangen door $(-1)$?">
 
 We mogen een minteken altijd vervangen door $(-1)$ omdat een minteken voor een
 factor hetzelfde betekent als "_vermenigvuldig met $-1$_".
@@ -124,9 +122,7 @@ $$
 \end{aligned}
 $$
 
-<Expand>
-
-Waarom mag je alle $(-1)-$en voorop zetten?
+<Expand title="Waarom mag je alle $(-1)-$en voorop zetten?">
 
 De vermenigvuldiging van rationale getallen is **commutatief**. <Mute
 text="(Hetzelfde geldt voor reële getallen.)" /> Dat betekent dat de volgorde
@@ -200,9 +196,7 @@ $$
 $$
 
 
-<Expand>
-
-Waarom mag je de coëfficiënt apart uitrekenen?
+<Expand title="Waarom mag je de coëfficiënt apart uitrekenen?">
 
 
 De vermenigvuldiging van rationale getallen is **commutatief**. <Mute
@@ -270,9 +264,7 @@ $$
 \end{aligned}
 $$
 
-<Expand>
-
-Waarom tellen we de exponenten bij elkaar op?
+<Expand title="Waarom tellen we de exponenten bij elkaar op?">
 
 Stel dat we de volgende eenterm hebben:
 
