--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
@@ -128,9 +128,7 @@ noemer te delen door $\Delta x$.
 
 ![$\Delta x$ wegdelen uit teller en noemer van de afgeleide.](img/delta_x_wegdelen.png)
 
-<Expand>
-
-Mogen we de teller en noemer zomaar delen door $\Delta x$?
+<Expand title="Mogen we de teller en noemer zomaar delen door $\Delta x$?">
 
 Wanneer je deelt, moet je altijd goed opletten dat je **niet aan het delen bent
 door nul**. Als $\Delta x$ gelijk zou zijn aan nul, zouden we de teller en
