--- a/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
@@ -29,9 +29,7 @@ voorlopig echter tot vier basisbewerkingen beperken:
 
 We bespreken deze bewerkingen hieronder apart.
 
-<Expand>
-
-Alle variabelen in deze les zijn reëel of rationaal
+<Expand title="Alle variabelen in deze les zijn reëel of rationaal">
 
 We gaan ervan uit dat alle variabelen in deze les een element zijn van de reële
 getallen. Als je nog niet weet wat reële getallen zijn, mag je ook aannemen
