--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -24,9 +24,7 @@ vereenvoudigen van een veelterm doe je zo:
 
 In deze les leggen we elk van die stappen wat verder uit.
 
-<Expand>
-
-Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in\mathbb{Q}$)
+<Expand title="Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in\mathbb{Q}$)">
 
 We gaan ervan uit dat alle variabelen in deze les een element zijn van de reële
 getallen. Als je nog niet weet wat reële getallen zijn, mag je ook aannemen
